[package]
name = "cactus"
description = "Immutable parent pointer tree"
repository = "https://github.com/softdevteam/cactus/"
version = "1.0.4"
authors = ["Laurence Tratt <laurie@tratt.net>"]
readme = "README.md"
# This should be "Apache-2.0 OR MIT OR UPL-1.0" but crates.io doesn't know about
# UPL-1.0.
license = "Apache-2.0 OR MIT"
categories = ["data-structures"]
edition = "2018"

[lib]
name = "cactus"
