[package]
name = "cactus"
description = "Immutable parent pointer tree"
repository = "https://github.com/softdevteam/cactus/"
version = "1.0.5"
authors = ["Laurence Tratt <laurie@tratt.net>"]
readme = "README.md"
license = "Apache-2.0/MIT"
categories = ["data-structures"]
edition = "2018"

[lib]
name = "cactus"
